# igbtool

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeSettings.txt  README.md
common/: CMakeLists.txt  err.h  log.cpp  log.h  math.h  print_float.cpp  print_float.h  types.h
igbgui/: .editorconfig  BitUtils.cs  IGBRetFuncDelegate.cs  IGBViewer.cs  IGBViewerSettings.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  StopwatchExt.cs  StringExt.cs  ViewerSettingsForm.Designer.cs  ViewerSettingsForm.cs  igbgui.csproj  igbgui.sln
igbgui/3D/: GLViewer.cs  ProjectionInfo.cs  RenderInfo.cs  Shader.cs  ShaderFuncs.cs  VAO.cs
igbgui/IGB/: IGB.cs  IGBClasses.cs
igbgui/IGB/Fields/: CNKLetterDataMetaField.cs  CrateDataMetaField.cs  CrystalDataMetaField.cs  MagGravNodeMetaField.cs  RankingNodeMetaField.cs  RestartPointDataMetaField.cs  igBoolMetaField.cs  igEnumMetaField.cs  igIntMetaField.cs  igMemoryRefMetaField.cs  igObjectRefMetaField.cs  igStringMetaField.cs  igVec3fMetaField.cs  igVec4fMetaField.cs
igbgui/IGB/Objects/: CNKLetterDataList.cs  CrateDataList.cs  CrystalDataList.cs  IigList.cs  LevelInfo.cs  LevelInfoAi.cs  LevelInfoCNKLetter.cs  LevelInfoCamera.cs  LevelInfoCrateExt.cs  LevelInfoCrates.cs  LevelInfoCrystal.cs  LevelInfoKartStart.cs  LevelInfoMagDisp.cs  LevelInfoMagGrav.cs  LevelInfoPhantom.cs  LevelInfoRanking.cs  LevelInfoRestart.cs  LevelInfoTrackPortal.cs  PhantomOBB.cs  (+23 more)
igbgui/Shaders/: line-model.vert  line-static.vert
igbgui/Utils/: BitUtils.cs  Color4Ext.cs  ResourceLoad.cs
igbtool/: CMakeLists.txt  igb.cpp  igb.h  igbtool.cpp
(+14 files in other folders)
